--- a/packages/common/src/styles/_variables-theme-material.scss
+++ b/packages/common/src/styles/_variables-theme-material.scss
@@ -96,6 +96,7 @@ $slick-dark-text-color:                                   #d4d4d4;
 .ms-dark-mode,
 .ms-drop.ms-dark-mode,
 .slick-dark-mode .ms-dark-mode,
+.slick-dark-mode .slick-submenu,
 .slick-dark-mode .icon-checkbox-container,
 .slick-dark-mode {
   --slick-base-dark-menu-bg-color:                #212121;
